# rizefir_site

./: .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml
rizefir/: asgi.py  settings.py  urls.py  views.py  wsgi.py
rizefir/customers/: apps.py
rizefir/products/: admin.py  apps.py  models.py  urls.py  views.py
rizefir/products/migrations/: 0001_initial.py
rizefir/users/: apps.py  forms.py  models.py  urls.py  views.py
static/css/: bootstrap.rtl.css  rizefir.css
templates/products/: index.html
templates/rizefir/: about.html  bar.html  base_layer.html  footer.html  header.html  index.html  payment.html
templates/users/: email_confirmation_failed.html  email_confirmation_sent.html  email_confirmed.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile.html  register.html  register_short.html
templatetags/: product_tags.py
